syntax = "proto3";

package api.v1.proto.shortener;

option go_package = "github.com/PickHD/singkatin-revamp/shortener/pkg/api/v1/proto/shortener;shortenerpb";

message Shortener {
    string id = 1;
    string full_url = 2;
    string short_url = 3;
    int64 visited = 4;
}

service ShortenerService {
    rpc GetListShortenerByUserID(ListShortenerRequest) returns (ListShortenerResponse);
}

message ListShortenerRequest {
    string user_id=1;
}

message ListShortenerResponse {
    repeated Shortener shorteners=1;
}

message CreateShortenerMessage {
    string user_id=1;
    string full_url=2;
    string short_url=3;
}

message UpdateVisitorCountMessage {
    string short_url=1;
}

message UpdateShortenerMessage {
    string id =1;
    string full_url=2;
}

